Fix database connections & mapping
1) We didn't even have the mysql library in our project dependencies for the JDBC driver
2) We had numerous column mapping issues since JDBC result set columns are numbered starting at 1 instead of 0 (ugh!)
3) We were trying to map the long class name (i.e. java.lang.String) instead of short class name (i.e. String) to match data types

With all three of the above fixed, we now have a working end-to-end API request which pulls up the list of databases.

The database password has been removed from configuration, so make sure to put it back as needed for testing, etc.